fixed some alignment

--- a/styles/codeblock.sass
+++ b/styles/codeblock.sass
@@ -27,7 +27,7 @@ $code-font: "Roboto Mono", "Courier New", Menlo, "DejaVu Sans Mono", Monaco, Cou
     line-height: 1.2
     font-family: $code-font
     position: absolute
-    top: 48px
+    top: 49px
     left: 10px
     height: calc(100% - 48px)
     width: calc(100% - 22px)
